--- a/nhietdo.html
+++ b/nhietdo.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Đổi nhiệt độ</title>
 </head>
 <body>
-$END$
+<script>
+    let doC;
+    let doF;
+    doC = prompt('Nhập độ C:');
+    doF = (9*doC)/5 +32;
+    document.write('Độ F:'+doF);
+</script>
 </body>
 </html>
