diện tích hình tròn

--- a/S_htron.html
+++ b/S_htron.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Diện tích hình tròn</title>
 </head>
 <body>
-$END$
+<script>
+    let bankinh;
+    let pi;
+    let dientich;
+    bankinh = prompt('Nhập bán kính đường tròn:');
+    pi = Math.PI;
+    dientich = bankinh*bankinh*pi;
+    document.write('Diện tích hình tròn:'+dientich);
+
+
+
+</script>
 </body>
 </html>
