chu vi hình tròn

--- a/chuvi_htron.html
+++ b/chuvi_htron.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Chu vi hình tròn</title>
 </head>
 <body>
-$END$
+<script>
+    let bankinh;
+    let chuvi;
+    let pi;
+    bankinh = prompt('Nhập bán kính hình tròn: ');
+    pi= Math.PI
+    chuvi =2*bankinh*pi ;
+    document.write('Chu vi hình tròn là:'+ chuvi);
+
+</script>
 </body>
 </html>
